Basic, but hardcoded MP3 Player. The Thechaton has just started!

--- a/MoodPlayer/app/src/main/res/layout/content_main.xml
+++ b/MoodPlayer/app/src/main/res/layout/content_main.xml
@@ -15,5 +15,15 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="MoodPlayer!!!" />
+        android:text="MoodPlayer!!!"
+        android:id="@+id/textView" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Play!"
+        android:id="@+id/play_button"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
