Added bitalino android core packages to mood-player

--- a/MoodPlayer/app/src/main/res/layout/content_main.xml
+++ b/MoodPlayer/app/src/main/res/layout/content_main.xml
@@ -26,4 +26,24 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Bitalino MAC Address"
+        android:id="@+id/textView3"
+        android:layout_above="@+id/play_button"
+        android:layout_toRightOf="@+id/textView"
+        android:layout_toEndOf="@+id/textView"
+        android:layout_marginBottom="117dp" />
+
+    <EditText
+        android:hint="00:29:23:12:12:23"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/mac_address"
+        android:layout_alignTop="@+id/textView3"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="39dp" />
+
 </RelativeLayout>
