--- a/MoodPlayer/app/src/main/res/layout/select_mode_activity.xml
+++ b/MoodPlayer/app/src/main/res/layout/select_mode_activity.xml
@@ -5,7 +5,7 @@
 
     <Button
         android:layout_marginTop="100dp"
-        android:layout_width="wrap_content"
+        android:layout_width="211dp"
         android:layout_height="wrap_content"
         android:text="Beast Mode"
         android:id="@+id/play_beast_mode"
@@ -13,7 +13,7 @@
 
     <Button
         android:layout_marginTop="100dp"
-        android:layout_width="wrap_content"
+        android:layout_width="228dp"
         android:layout_height="wrap_content"
         android:text="Relax Mode"
         android:id="@+id/play_relax_mode"
