--- a/MoodPlayer/app/src/main/res/layout/activity_main.xml
+++ b/MoodPlayer/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include layout="@layout/activity_content_main" />
 
 </android.support.design.widget.CoordinatorLayout>
